# todo-sync

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openclaw-skill-todo.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_widen_sync_state_resource_type.py  003_add_checklist_items.py  004_add_datetime_fields.py  005_add_linked_resources_and_attachments.py  006_f3_has_attachments_and_sync_metrics.py  007_recurring_completion_tracking.py  008_delta_truncation_error_counter.py
app/: config.py  init_db.py  main.py  models.py  scheduler.py  schemas.py
app/api/: attachments.py  auth.py  linked_resources.py  router.py  stats.py  sync.py  task_lists.py  tasks.py
app/services/: attachment_service.py  auth_service.py  graph_client.py  graph_id.py  linked_resource_service.py  sync_service.py  task_service.py
docs/adr/: 0001-f2.1-linked-resource-push.md  0002-recurring-tasks-completion-fix.md  0003-sync-integrity.md
docs/architecture/: 2026-04-13-roadmap.md
tests/: test_attach_url_endpoint.py  test_attach_url_smoke.py  test_completion_patch_contract.py  test_delta_truncation_integrity.py  test_f1_schemas.py  test_f2_1_linked_resource_push.py  test_f2_api.py  test_f2_schemas.py  test_f2_sync.py  test_f3_api.py  test_f3_schemas.py  test_f3_sync.py  test_qa_integration.py  test_recurring_health.py  test_recurring_pull_path.py  test_recurring_write_path.py  test_sync_pull_datetime.py
